// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WeatherList test WeatherList with blur 1`] = `
.c2 {
  width: 60px;
}

.c0 {
  width: 100%;
  max-width: 500px;
  margin: 0 auto;
  margin-top: 40px;
  -webkit-transition: filter 0.3s ease-in-out;
  transition: filter 0.3s ease-in-out;
  -webkit-filter: blur(8px);
  filter: blur(8px);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 28px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 60px;
}

.c3 > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 div:nth-child(1) {
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
}

.c3 div:nth-child(2) {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 28px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 60px;
  background-color: #ffffff55;
  border-radius: 12px;
  padding: 0 10px;
  cursor: pointer;
  margin: 0 -10px;
}

.c4 > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 div:nth-child(1) {
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
}

.c4 div:nth-child(2) {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 80px;
  font-weight: 900;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 > * {
  padding: 0 10px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <span
        class="c2"
      >
        <svg>
          wi-day-showers.svg
        </svg>
      </span>
      <div>
        18
        °
      </div>
    </div>
    <div
      class="c3"
    >
      <div>
        Sunday
      </div>
      <div>
        21
        °
      </div>
      <div>
        <span
          class="c2"
        >
          <svg>
            wi-day-showers.svg
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c3"
    >
      <div>
        Monday
      </div>
      <div>
        18
        °
      </div>
      <div>
        <span
          class="c2"
        >
          <svg>
            wi-day-showers.svg
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c3"
    >
      <div>
        Tuesday
      </div>
      <div>
        21
        °
      </div>
      <div>
        <span
          class="c2"
        >
          <svg>
            wi-cloudy.svg
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c3"
    >
      <div>
        Wednesday
      </div>
      <div>
        21
        °
      </div>
      <div>
        <span
          class="c2"
        >
          <svg>
            wi-cloudy.svg
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c4"
    >
      <div>
        show 
        more
      </div>
      <div />
      <div>
        <span
          class="c2"
        >
          <svg>
            wi-direction-down.svg
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`WeatherList test WeatherList without blur 1`] = `
.c2 {
  width: 60px;
}

.c0 {
  width: 100%;
  max-width: 500px;
  margin: 0 auto;
  margin-top: 40px;
  -webkit-transition: filter 0.3s ease-in-out;
  transition: filter 0.3s ease-in-out;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 28px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 60px;
}

.c3 > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 div:nth-child(1) {
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
}

.c3 div:nth-child(2) {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 28px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 60px;
  background-color: #ffffff55;
  border-radius: 12px;
  padding: 0 10px;
  cursor: pointer;
  margin: 0 -10px;
}

.c4 > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 div:nth-child(1) {
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
}

.c4 div:nth-child(2) {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 80px;
  font-weight: 900;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 > * {
  padding: 0 10px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <span
        class="c2"
      >
        <svg>
          wi-day-showers.svg
        </svg>
      </span>
      <div>
        18
        °
      </div>
    </div>
    <div
      class="c3"
    >
      <div>
        Sunday
      </div>
      <div>
        21
        °
      </div>
      <div>
        <span
          class="c2"
        >
          <svg>
            wi-day-showers.svg
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c3"
    >
      <div>
        Monday
      </div>
      <div>
        18
        °
      </div>
      <div>
        <span
          class="c2"
        >
          <svg>
            wi-day-showers.svg
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c3"
    >
      <div>
        Tuesday
      </div>
      <div>
        21
        °
      </div>
      <div>
        <span
          class="c2"
        >
          <svg>
            wi-cloudy.svg
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c3"
    >
      <div>
        Wednesday
      </div>
      <div>
        21
        °
      </div>
      <div>
        <span
          class="c2"
        >
          <svg>
            wi-cloudy.svg
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c4"
    >
      <div>
        show 
        more
      </div>
      <div />
      <div>
        <span
          class="c2"
        >
          <svg>
            wi-direction-down.svg
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;
